chore: add docker database URL to env and generate initial Prisma migration

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: meu-postgres
     restart: always
     environment:
-      POSTGRES_DB: meu_banco
+      POSTGRES_DB: focuzevent
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
     ports:
