--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backend",
+  "name": "Focuz",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +18,23 @@
     "express": "5.1.0",
     "jsonwebtoken": "9.0.2",
     "multer": "2.0.1",
-    "uuid": "11.1.0"
+    "uuid": "11.1.0",
+    "zod": "4.0.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
+    "@types/cors": "2.8.19",
+    "@types/express": "5.0.3",
+    "@types/jsonwebtoken": "9.0.10",
+    "@types/multer": "2.0.0",
+    "@types/node": "24.0.13",
     "eslint": "8.39.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "nodemon": "3.1.10",
-    "prisma": "6.8.2"
+    "prisma": "6.8.2",
+    "tsup": "8.5.0",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3"
   }
 }
