--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "start": "node build/server.cjs",
+    "build": "tsup src --out-dir build",
+    "seed": "ts-node src/prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +36,7 @@
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "prisma": "6.8.2",
+    "ts-node": "10.9.2",
     "tsup": "8.5.0",
     "tsx": "4.20.3",
     "typescript": "5.8.3"
