feat: criar função de criação de impulso e adicionar webhook de integração

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,6 @@
 DATABASE_URL="postgresql://root:root@localhost:5432/focuzevent?schema=public"
 JWT_SECRET="coloque seu segredo aqui"
+PORT=3000
+
+STRIPE_SECRET_KEY=""
+STRIPE_WEBHOOK_SECRET=""
