--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "8.0.1",
     "jsonwebtoken": "9.0.2",
     "multer": "2.0.2",
+    "stripe": "18.4.0",
     "uuid": "11.1.0",
     "zod": "4.0.5"
   },
