refactor: adicionar paginação e filtros na rota de eventos impulsionados

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -18,6 +18,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "operator-linebreak": "off",
     "object-curly-newline": "off",
     "comma-dangle": "off",
     "no-console": "off",
